manifest/objects/Apttus__AccountHierarchy__c.object
<CustomObject>
    <description>This defines a single instance of an account hierarchy relationship. It contains the leaf Id, the parent Id, the root Id, and the level.</description>
    <fields>
        <fullName>Apttus__AccountLeafId__c</fullName>
        <description>The account Id of the leaf.
Root &gt; Parent &gt; Leaf</description>
        <inlineHelpText>The account Id of the leaf.
Root &gt; Parent &gt; Leaf</inlineHelpText>
        <label>Account Leaf</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchies</relationshipLabel>
        <relationshipName>AccountHierarchiesLeaf</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__AccountLevel__c</fullName>
        <description>The hierarchical level of the account of the accounts hierarchy.
It&apos;s used in the listing tree view in the account hierarchy to identify the indentation.</description>
        <inlineHelpText>The hierarchical level of the account of the accounts hierarchy.
It&apos;s used in the listing tree view in the account hierarchy to identify the indentation.</inlineHelpText>
        <label>Account Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__AccountParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account Id of the parent.
Root &gt; Parent &gt; Leaf</description>
        <inlineHelpText>The account Id of the parent.
Root &gt; Parent &gt; Leaf</inlineHelpText>
        <label>Account Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchies (Account)</relationshipLabel>
        <relationshipName>AccountHierarchiesParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__AccountRootId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account Id of the root. A root account is the primordial account which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root account for a hierarchy.
Root &gt; Parent &gt; Leaf</description>
        <inlineHelpText>The account Id of the root. A root account is the primordial account which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root account for a hierarchy.
Root &gt; Parent &gt; Leaf</inlineHelpText>
        <label>Account Root</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchies (Account)</relationshipLabel>
        <relationshipName>AccountHierarchiesRoot</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Hierarchy</label>
    <nameField>
        <label>Account Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>